--- a/JPARelations-ManyToMany/src/main/resources/application.properties
+++ b/JPARelations-ManyToMany/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/demo?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
